styles.css
:root {
  --pink: rgb(228, 167, 177);
  --blue: rgb(152, 226, 226);
  --font-one: 'Kanit', sans-serif;
  --font-two: 'Source Code Pro', monospace;
  --font-default: 'Courier New', Courier, monospace;
}

html {
  background: radial-gradient(rgb(43, 42, 42), black);
  font-family: 'Courier New', Courier, monospace;
  font-size: 62.5%;
  scroll-behavior: smooth;
}

body {
  display: flex;
  flex-flow: column nowrap;
  align-items: center;
  justify-content: space-between;
  min-height: 100vh;
}

div#home {
  min-height: 90vh;
  display: flex;
  flex-flow: column nowrap;
  align-items: center;
  justify-content: center;
}

div.title-container {
  animation: expand 0.7s ease forwards;
  margin: 12rem 0;
  background: #252525;
}

div.title-container:hover {
  animation: breathe 2s ease-in-out infinite alternate;
}

div.title {
  text-align: center;
  padding: 3rem 4vw;
  box-shadow: 0px 0px 15px 10px rgba(255, 255, 255, 0.3);
  transform-origin: bottom;
}

@keyframes breathe {
  0% {
    transform: scale(1) translateY(0rem);
    box-shadow: 10px 10px 25px -25px orange, -10px -10px 25px -25px var(--blue),
      10px -10px 25px -25px var(--pink), -10px 10px 25px -25px var(--pink);
  }
  100% {
    transform: scale(1.15) translateY(-30px);
    box-shadow: 25px 25px 25px -25px orange, -25px -25px 25px -25px var(--blue),
      25px -25px 25px -25px var(--pink), -25px 25px 25px -25px var(--pink);
  }
}

@keyframes expand {
  0% {
    transform: scaleY(0);
    opacity: 0;
  }
  50% {
    transform: scale(1.1);
    opacity: 1;
  }
  85% {
    box-shadow: 30px 0px 50px 10px #ffffff30, -30px 0px 50px 10px #ffffff30;
  }
  100% {
    transform: scaleY(1);
  }
}

.border-gradient {
  border: 1px solid;
  border-image-slice: 1;
  border-width: 3px;
}

.border-gradient-sunset {
  border-image-source: linear-gradient(
    to bottom right,
    var(--blue) 0%,
    var(--blue) 30%,
    var(--pink) 50%,
    var(--pink) 55%,
    orange 75%
  );
}

.text-gradient-sunset {
  background: linear-gradient(
    to bottom right,
    var(--blue) 0%,
    var(--blue) 30%,
    var(--pink) 50%,
    var(--pink) 55%,
    orange 75%
  );
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

h1,
h2 {
  margin: 0;
}

h1#my-name {
  margin: auto 0 1rem 0;
  font-size: 6rem;
  letter-spacing: 1.2rem;
  text-indent: 1.2rem;
  font-weight: 300;
  font-family: 'Kanit', sans-serif;
  text-align: center;
}

h2#my-role {
  margin: 2.5rem 0 auto 0;
  font-size: 3rem;
  letter-spacing: 0.5rem;
  text-indent: 0.5rem;
  font-weight: 100;
  font-family: 'Source Code Pro', monospace;
}

hr {
  border-bottom: 1px solid;
  border-image-slice: 1;
  border-width: 1px;
}

a {
  font-size: 4rem;
  padding: 0.2rem 2rem;
  color: var(--pink);
  font-family: var(--font-one);
  font-weight: 700;
  text-decoration: none;
  border: 1px solid #353535;
  border-radius: 9999px;
  margin: 0 4rem;
  background: #222;
}

a:active:hover {
  background-color: #333;
}

a:hover {
  border-color: #555555;
  background: #252525;
  animation: strokify 2.5s ease-in-out infinite alternate;
  font-style: italic;
}

@keyframes strokify {
  0% {
    -webkit-text-stroke-width: 2px;
    -webkit-text-stroke-color: var(--pink);
    color: transparent;
  }
  30% {
    -webkit-text-stroke-width: 2px;
    -webkit-text-stroke-color: orange;
    color: transparent;
  }
  60% {
    -webkit-text-stroke-width: 2px;
    -webkit-text-stroke-color: var(--pink);
    color: transparent;
  }
  100% {
    -webkit-text-stroke-width: 2px;
    -webkit-text-stroke-color: rgb(144, 189, 189);
    color: transparent;
  }
}

div#projects {
  min-height: 100vh;
  width: 100%;
}

div#projects h1 {
  margin-top: 8vh;
  font-family: 'Kanit', sans-serif;
  font-weight: 800;
  font-size: 6rem;
  color: rgb(24, 24, 24);
  display: flex;
  flex-flow: column nowrap;
  justify-content: flex-end;
  align-items: flex-start;
  padding-left: 8rem;
}

div.section-header {
  display: flex;
  flex-flow: row nowrap;
  align-items: center;
  justify-content: flex-start;
}

div.rule {
  margin-top: 8vh;
  height: 3px;
  background: linear-gradient(
    to right,
    transparent 0%,
    rgb(24, 24, 24) 10%,
    rgb(24, 24, 24) 80%,
    transparent 90%
  );
  width: 60%;
  margin-left: 2%;
  flex-grow: 2;
}

div.home-links {
  display: flex;
  flex-flow: row nowrap;
  justify-content: space-around;
  align-items: center;
  max-width: 45vw;
}

div.home-links a {
  text-align: center;
}

.gradient-divider {
  width: 100vw;
  height: 15rem;
}

.gradient-divider-orange {
  background: linear-gradient(to bottom, transparent, #ffa50060);
}

div.section-contents {
  background: linear-gradient(
    to bottom,
    #ffa50060,
    orange,
    var(--pink),
    var(--blue)
  );
  min-height: 100vh;
  display: flex;
  flex-flow: row wrap;
  align-items: flex-start;
  justify-content: space-around;
  width: calc(100vw - 16rem);
  padding: 0 8rem;
}

div.card {
  max-width: 40vw;
  background: #222;
  margin: 2.5vw 0;
  border-radius: 1rem;
  padding: 1.3rem;
  animation: drop 0.5s ease forwards;
}

div.card h2 {
  color: var(--pink);
  font-family: var(--font-one);
  font-size: 3rem;
  font-weight: 700;
  letter-spacing: 0.3rem;
  padding: 0 1.5rem 1rem 1.5rem;
  border-bottom: 2px solid #333;
}

div.card h3 {
  font-family: var(--font-one);
  font-weight: 600;
  color: var(--pink);
  opacity: 0.75;
  font-size: 1.5rem;
  margin: 0;
  padding-left: 1.5rem;
}

h3.card-date {
  opacity: 0.5 !important;
  font-style: italic;
  font-weight: 300 !important;
  line-height: 80%;
}

div.card ul {
  color: orange;
  font-family: var(--font-two);
  padding: 0.5rem 1.5rem;
  font-size: 1.3rem;
  font-weight: 500;
}

div.card ul > li {
  padding: 0.5rem 0;
}

div.card:hover {
  animation: lift 0.5s ease forwards;
  z-index: 2;
  cursor: pointer;
}

div.card:hover h2 {
  animation: color-bend 0.5s ease forwards;
}

div.card hr {
  margin-top: 0;
  transform-origin: left;
  transform: scaleX(0) translateY(0.2rem);
}

div.card:hover hr {
  animation: widen 0.5s ease forwards, colorize 0.5s ease forwards;
}

@keyframes widen {
  from {
    transform: scaleX(0) translateY(-0.2rem);
  }
  to {
    transform: scaleX(1) translateY(-0.2rem);
  }
}

@keyframes drop {
  from {
    transform: scale(1.1);
    box-shadow: 2px 5px 20px 5px #00000050;
  }
  to {
    transform: scale(1);
    box-shadow: 1px 1px 5px 0px #00000050;
  }
}

@keyframes lift {
  0% {
    box-shadow: 1px 1px 5px 0px #00000050;
    transform: scale(1);
    border: none;
  }
  30% {
    transform: scale(1.13);
    box-shadow: 2px 7px 23px 7px #00000050;
  }
  80% {
    transform: scale(1.09);
    box-shadow: 1px 1px 7px 0px #00000050;
  }
  100% {
    box-shadow: 2px 5px 20px 5px #00000050;
    transform: scale(1.1);
    border: 1px solid rgba(152, 226, 226, 0.55);
  }
}

@keyframes color-bend {
  0% {
    text-shadow: 0px 0px 0px rgba(255, 166, 0, 0.555),
      -0px -0px 0px rgba(152, 226, 226, 0.4);
  }
  50% {
    text-shadow: 10px 10px 0px rgba(255, 166, 0, 0.555),
      -10px -10px 0px rgba(152, 226, 226, 0.4);
  }
  100% {
    text-shadow: 0px 0px 10px #222, 3px 3px 0px rgba(255, 166, 0, 0.555),
      -3px -3px 0px rgba(152, 226, 226, 0.4);
  }
}

#sun-bg path {
  fill: url(#grad);
}

svg#sun-bg {
  opacity: 0.2;
  position: fixed;
  transform: scale(2) translateY(0vh) translateX(0.3rem);
  z-index: -1;
}

